Try to fix font issue on mobile (2nd attempt)

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,7 +4,7 @@
 
 @font-face {
   font-family: 'PP Neue Montreal';
-  font-weight: 530;
+  font-weight: 500;
   font-display: swap;
   font-style: normal;
   src: url('/fonts/PPNeueMontreal-Medium.woff2') format('woff2');
